split engine from project step 1 and 2

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Ant-Djin/Win32/**
 Ant-Djin/Minigin/x64/**
 Ant-Djin/Minigin/Win32/**
 Ant-Djin/3rdParty/glm/glm/out/**
+Ant-Djin/BurgerTime/Win32/**
+Ant-Djin/BurgerTime/x64/**
