--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ Ant-Djin/Win32/**
 Ant-Djin/Minigin/x64/**
 Ant-Djin/Minigin/Win32/**
 Ant-Djin/3rdParty/glm/glm/out/**
-Ant-Djin/BurgerTime/Win32/**
-Ant-Djin/BurgerTime/x64/**
+Ant-Djin/Tron/Win32/**
+Ant-Djin/Tron/x64/**
